X-axis overflow solved

--- a/src/AddNote.css
+++ b/src/AddNote.css
@@ -86,16 +86,13 @@
 }
 
 .current-notes-body {
-	overflow-x: auto;
 	width: 100%;
-	height: 70%;
+	min-height: 70%;
 	background-image: linear-gradient(white, lightblue);
 	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: center;
+	justify-content: center;
+	align-items: flex-start !important;
 	flex-wrap: wrap;
-	align-content: center;
 }
 
 .archive-note-with-buttons:nth-child(n) {
@@ -124,7 +121,7 @@
 
 .archive-note-with-buttons {
 	overflow-y: auto;
-	max-height: auto;
+	max-height: 400px;
 	width: 200px;
 	display: flex;
 	flex-direction: column;
